erk, fix for relative paths in the new css/js setup

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -4,9 +4,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>like spreadsheets, but better</title>
-    <link rel="stylesheet" href="spreadsheet.head.css" />
+    <link rel="stylesheet" href="/spreadsheet.head.css" />
   </head>
-  <script src="spreadsheet.head.js"></script>
+  <script src="/spreadsheet.head.js"></script>
   <body id="hn" data-view="spreadsheet">
     <div id="pagemenu" style="background-color:#000;">
     <div id="hn_save_msg"></div>
@@ -901,5 +901,5 @@
     </div>
   </body>
 
-    <script src="spreadsheet.body.js"></script>
+    <script src="/spreadsheet.body.js"></script>
 </html>
