make the tableview play with wordpress

--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -97,5 +97,7 @@
   <script src='/hypernumbers/hn.sheet.js'></script>
   <script src='/hypernumbers/hn.data.js'></script>
   <script src='/hypernumbers/hn.dialog.js'></script>
+  <script src='/postmessage/jquery.ba-postmessage.js'></script>
+  <script src='/postmessage/hn.postmessage.js'></script>
   <script src='/hypernumbers/hn.rendertable.js'></script>
 </html>
