added support for google analytics

--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
     <link rel="stylesheet" href="/tblsorter/style.css" />
+    <script src="/hypernumbers/err.remoterr.js"></script>
+    <script src="/google_analytics.js"></script>
   </head>
-  <script src="/hypernumbers/err.remoterr.js"></script>
   <body data-view="table">
 
     <div id="overlay"></div>
