--- a/priv/testserver/test_suite_template.erb
+++ b/priv/testserver/test_suite_template.erb
@@ -31,8 +31,7 @@
                ?print_error_or_return(Res, Func)).
 
 %%% TESTS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-<%= @testcasedata.map { |rec| "?test(#{rec[0]}, \"#{rec[1]}\", \"#{rec[2]}\", #{rec[3]})"}.join(".\n") %>
-.
+<%= @testcasedata.map { |rec| "?test(#{rec[0]}, \"#{rec[1]}\", \"#{rec[2]}\", #{rec[3]})."}.join("\n") %>
 %%% ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 init_per_suite(Config) ->
