first cut of the api handling web control

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -784,7 +784,12 @@ input[type=submit].hninput:hover {
   overflow: auto;
   }
 
-.hn_user_table
+.hn_api_table
+{
+    text-align: left;
+}
+
+.hn_user_table, .hn_api_table
 {
   padding-bottom: 1.5em;
   }
