hide the option to upload a spreadsheet

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -79,7 +79,7 @@
       <a name="sitemypages">Open Page...</a>
       <a name="sitedelete">Delete Page</a>
       <a name="sitesaveastemplate">Save As Template...</a>
-      <a name="siteuploadxls">Upload .xls File...</a>
+      <!-- <a name="siteuploadxls">Upload .xls File...</a> --!>
       <a name="sitesettings">Site Settings...</a>
       <a class="hn_advanced" name="sitedataupload">Data Upload...</a>
       <a class="hn_developer" name="sitemanageapi">Manage API...</a>
