--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -336,10 +336,39 @@ input[type=submit].hninput:hover {
                clear: both;
  }
 
+.hn_incrementor {
+    width      : 100%;
+    height     : 100%;
+    margin     : 0, auto;
+    padding    : 0;
+    text-align : center;
+    border     : 1px solid #aaa;
+}
+
+.hn_increment, .hn_decrement {
+    width            : 25%;
+    float            : left;
+    background-color : #eee;
+    height           : 100%;
+}
+
+.hn_incr_val {
+    width : 50%;
+    float : left;
+}
+
 .inlineform
 {
   background: url(/hypernumbers/sprite.png) -64px -1px;
   }
+
+.inlinecheck {
+  background: url(/hypernumbers/sprite.png) -64px -24px;
+}
+
+.inlineincrement {
+  background: url(/hypernumbers/sprite.png) -64px -17px;
+}
 
 .inlinerichform
 {
@@ -358,7 +387,15 @@ input[type=submit].hninput:hover {
   background: url(/hypernumbers/sprite.png) -122px -1px;
  }
 
-.hn_ghost, .hn_ghost_inline, .hn_ghost_rich
+.hn_ghost_checkbox {
+  background: url(/hypernumbers/sprite.png) -172px -1px;
+ }
+
+.hn_ghost_incr {
+  background: url(/hypernumbers/sprite.png) -155px -1px;
+ }
+
+.hn_ghost, .hn_ghost_inline, .hn_ghost_rich, .hn_ghost_checkbox, .hn_ghost_incr
 {
   z-index:    9999;
   position:   absolute;
@@ -368,7 +405,7 @@ input[type=submit].hninput:hover {
   width:      15px;
   }
 
-.inlineform, .inlinerichform {
+.inlineform, .inlinerichform, .inlinecheck, .inlineincrement {
     z-index:    9999;
     position:   absolute;
     left:       0px;
