final remove of vixo

--- a/lib/hypernumbers-1.0/priv/core_install/views/404.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>Vixo - 404 Page Not Found</title>
+    <title>Hypernumbers - 404 Page Not Found</title>
 
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
@@ -20,7 +20,7 @@
   <body>
     <div id="wrapper">
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/vixo.png" alt="logo"></img>
+        <img src="/img/logo_white.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>404 Page Not Found</strong></p>
           <p>Sorry, that page does not exist.</p>
@@ -56,7 +56,7 @@
               <span id='forgotten_pwd'></span><br />
             </div>
             <div id='loginfeedback'></div>
-            or sign up at <a href='http://vixo.com'>vixo.com</a>
+            or sign up at <a href='http://hypernumbers.com'>hypernumbers.com</a>
           </form>
         </div>
       </div>
