--- a/lib/hypernumbers-1.0/priv/core_install/views/no_recording.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/no_recording.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <title>Vixo - No Recording</title>
+    <title>Hypernumbers - No Recording</title>
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />
@@ -11,7 +11,7 @@
   <body>
     <div id="wrapper">
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/vixo.png" alt="logo"></img>
+        <img src="/img/logo_white.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>No Recording</strong></p>
           <p>Sorry, there is no recording for this call.</p>
