--- a/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/recalc.html
@@ -12,11 +12,11 @@
 <body style='margin:0px;padding:0px;font: 12px/1.7 Verdana,Tahoma,sans-serif;text-align:center'>
 <div id='wrapper'>
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/vixo.png" alt="logo"></img>
+        <img src="/img/logo_white.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>Recalculating</strong></p>
           <p>Sorry you have to use this functionality.</p>
-          <p>The Vixo Team are working on it.</p>
+          <p>The Hypernumbers Team are working on it.</p>
         </div>
       </div>
       </div>
