--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -77,7 +77,7 @@
             <div class='formrow'><input type='submit' id='submit' value='Log in' class='button' /><span id='forgotten_pwd'></span><br /></div>
             <div id='loginfeedback'></div>
 
-            or sign up at <a href='http://vixo.com'>vixo.com</a>
+            or sign up at <a href='http://hypernumbers.com'>hypernumbers.com</a>
           </form>
         </div>
     </div>
