--- a/lib/hypernumbers-1.0/priv/core_install/views/thankyou.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/thankyou.html
@@ -15,7 +15,7 @@
   <body>
     <div id="wrapper">
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/vixo.png" alt="logo"></img>
+        <img src="/img/logo_white.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>Thank You</strong></p>
           <p>Thank you for validating your email address. All site emails will now be sent out in your name.</p>
