--- a/lib/hypernumbers-1.0/priv/core_install/views/401.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/401.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>Vixo - Permission Denied</title>
+    <title>Hypernumbers - Permission Denied</title>
 
     <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
     <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
@@ -17,7 +17,7 @@
     <div id="wrapper">
 
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/vixo.png" alt="logo"></img>
+        <img src="/img/logo_white.png" alt="logo"></img>
         <div style="padding:10px;">
           <p><strong>401 Permission Denied</strong></p>
           <p>Sorry, you do not have permission to access this page.
@@ -53,7 +53,7 @@
                 <span id='forgotten_pwd'></span><br />
               </div>
               <div id='loginfeedback'></div>
-              or sign up at <a href='http://vixo.com'>vixo.com</a>
+              or sign up at <a href='http://hypernumbers.com'>hypernumberso.com</a>
             </form>
           </div>
         </div>
